<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:override="true">Positional</string>
    <string name="common_close">Close</string>
    <string name="common_dash" translatable="false">—</string>
    <string name="common_do_not_ask_again">DON\'T ASK AGAIN</string>
    <string name="common_exit">Exit</string>
    <string name="common_ok">OK</string>
    <string name="common_privacy_policy">Privacy policy</string>
    <string name="bottom_navigation_compass">Compass</string>
    <string name="bottom_navigation_location">Location</string>
    <string name="bottom_navigation_sun">Sun</string>
    <string name="bottom_navigation_settings">Settings</string>
    <string name="compass_accuracy_warning_body">The sensors used to determine your direction currently have low accuracy. Moving your device in a figure eight pattern may help.</string>
    <string name="compass_accuracy_warning_title">Low Compass Accuracy</string>
    <string name="compass_declination">%.2f°</string>
    <string name="compass_declination_label">Declination</string>
    <string name="compass_degrees">%d°</string>
    <string name="compass_degrees_content_description">Current bearing %d degrees</string>
    <string name="compass_degrees_content_description_unknown">Current bearing unknown</string>
    <string name="compass_accuracy_high">High</string>
    <string name="compass_accuracy_low">Low</string>
    <string name="compass_accuracy_medium">Medium</string>
    <string name="compass_accuracy_unusable">Unusable</string>
    <string name="compass_accuracy_title">Accuracy </string>
    <string name="compass_accuracy_unknown">@string/common_dash</string>
    <string name="compass_accuracy_unreliable">Unreliable</string>
    <string name="compass_direction_east">E</string>
    <string name="compass_direction_north">N</string>
    <string name="compass_direction_northeast">NE</string>
    <string name="compass_direction_northwest">NW</string>
    <string name="compass_direction_south">S</string>
    <string name="compass_direction_southeast">SE</string>
    <string name="compass_direction_southwest">SW</string>
    <string name="compass_direction_west">W</string>
    <string name="compass_magnetic_field_strength_label">Field Strength</string>
    <string name="compass_magnetic_field_strength_value">%d μT</string>
    <string name="compass_mode_label">Mode</string>
    <string name="compass_mode_value_magnetic_north">Magnetic North</string>
    <string name="compass_mode_value_true_north">True North</string>
    <string name="compass_missing_hardware_body">The compass has been disabled.</string>
    <string name="compass_missing_hardware_body_details">Most compass apps, like Positional, use a magnetometer that detects Earth\'s magnetic field just like a real compass uses a magnetic needle. We also use an accelerometer to determine how the device is oriented in the magnetic field (e.g. right side up or upside down). Unfortunately, your device is missing at least one of those sensors.</string>
    <string name="compass_missing_hardware_button_why">Why?</string>
    <string name="compass_missing_hardware_title">Missing Hardware</string>
    <string name="location_accuracy">± %s</string>
    <string name="location_accuracy_imperial">%s ft</string>
    <string name="location_accuracy_metric">%s m</string>
    <string name="location_altitude_imperial">%s ft</string>
    <string name="location_altitude_metric">%s m</string>
    <string name="location_bearing">%d°</string>
    <string name="location_coordinate_decimal">%.5f</string>
    <string name="location_coordinate_utm">%7.0f</string>
    <string name="location_coordinates_copy_label">Location</string>
    <string name="location_coordinates_copy_both">Latitude and longitude</string>
    <string name="location_coordinates_copy_content_description">Copy coordinates</string>
    <string name="location_coordinates_copy_latitude">Latitude only</string>
    <string name="location_coordinates_copy_longitude">Longitude only</string>
    <string name="location_coordinates_copy_title">Which coordinates would you like to copy?</string>
    <string name="location_coordinates_copy_tooltip">Copy coordinates</string>
    <string name="location_help_button_content_description">Help</string>
    <string name="location_help_button_tooltip">Help</string>
    <string name="location_help_toolbar_title">Location Help</string>
    <string name="location_label_accuracy">Accuracy</string>
    <string name="location_label_bearing">Bearing</string>
    <string name="location_label_altitude">Altitude</string>
    <string name="location_label_speed">Speed</string>
    <string name="location_permission_required_button_ok" translatable="false">@string/common_ok</string>
    <string name="location_permission_required_button_privacy_policy">Here is our simple privacy policy.</string>
    <string name="location_permission_required_body">Positional is private by design. Your location is never shared with anyone unless you explicitly share it.</string>
    <string name="location_permission_required_title">Location Permission Required</string>
    <string name="location_permission_without_rationale_title">Let\'s get started!</string>
    <string name="location_permission_without_rationale_message">In order to show your location, Positional needs permission. Your location is never recorded. For more details, check out the simple privacy policy.</string>
    <string name="location_screen_lock_button_content_description_off">Lock screen (currently off)</string>
    <string name="location_screen_lock_button_content_description_on">Lock screen (currently on)</string>
    <string name="location_screen_lock_button_tooltip_off">Lock screen (currently off)</string>
    <string name="location_screen_lock_button_tooltip_on">Lock screen (currently on)</string>
    <string name="location_share_button_content_description">Share coordinates</string>
    <string name="location_share_button_tooltip">Share coordinates</string>
    <string name="location_snackbar_coordinates_copy_error">Hold tight, still trying to get your location…</string>
    <string name="location_snackbar_coordinates_copy_success_both">Latitude and longitude copied</string>
    <string name="location_snackbar_coordinates_copy_success_latitude">Latitude copied</string>
    <string name="location_snackbar_coordinates_copy_success_longitude">Longitude copied</string>
    <string name="location_snackbar_coordinates_share_error">Hold tight, still trying to get your coordinates…</string>
    <string name="location_snackbar_screen_locked">Screen locked on while showing coordinates</string>
    <string name="location_snackbar_screen_unlocked">Screen unlocked</string>
    <string name="location_speed_imperial">%s mph</string>
    <string name="location_speed_metric">%s km/h</string>
    <string name="location_updated_at">Updated at %s</string>
    <string name="location_updating">Device is acquiring location…</string>
    <string name="sun_label">Sun</string>
    <string name="sun_astronomical_content_description_dawn">Astronomical dawn</string>
    <string name="sun_astronomical_content_description_dusk">Astronomical dusk</string>
    <string name="sun_astronomical_label">Astronomical</string>
    <string name="sun_astronomical_tooltip_dawn">Astronomical dawn is the morning moment when the sun\'s center is 18° below the horizon.</string>
    <string name="sun_astronomical_tooltip_dusk">Astronomical dusk is the evening moment when the sun\'s center is 18° below the horizon.</string>
    <string name="sun_civil_content_description_dawn">Civil dawn</string>
    <string name="sun_civil_content_description_dusk">Civil dusk</string>
    <string name="sun_civil_label">Civil</string>
    <string name="sun_civil_tooltip_dawn">Civil dawn is the morning moment when the sun\'s center is 6° below the horizon.</string>
    <string name="sun_civil_tooltip_dusk">Civil dusk is the evening moment when the sun\'s center is 6° below the horizon.</string>
    <string name="sun_dawn_label">Dawn</string>
    <string name="sun_dusk_label">Dusk</string>
    <string name="sun_nautical_content_description_dawn">Nautical dawn</string>
    <string name="sun_nautical_content_description_dusk">Nautical dusk</string>
    <string name="sun_nautical_label">Nautical</string>
    <string name="sun_nautical_tooltip_dawn">Nautical dawn is the morning moment when the sun\'s center is 12° below the horizon.</string>
    <string name="sun_nautical_tooltip_dusk">Nautical dusk is the evening moment when the sun\'s center is 12° below the horizon.</string>
    <string name="sun_sunrise_label">Sunrise</string>
    <string name="sun_sunrise_tooltip">Sunrise is the morning moment when the sun\'s center is visible on the horizon.</string>
    <string name="sun_sunset_label">Sunset</string>
    <string name="sun_sunset_tooltip">Sunset is the evening moment when the sun\'s center is no longer visible on the horizon.</string>
    <string name="sun_date_unknown">@string/common_dash</string>
    <string name="sun_time_unknown">@string/common_dash</string>
    <string name="settings_compass_mode_dialog_title">Compass Mode</string>
    <string name="settings_compass_mode_key">compassMode</string>
    <string name="settings_compass_mode_magnetic_label">Magnetic North</string>
    <string name="settings_compass_mode_magnetic_value">magneticNorth</string>
    <string name="settings_compass_mode_title">Compass mode</string>
    <string name="settings_compass_mode_true_label">True North</string>
    <string name="settings_compass_mode_true_value">trueNorth</string>
    <string name="settings_filename">Positional</string>
    <string name="settings_coordinates_format_dialog_title">Location Format</string>
    <string name="settings_coordinates_format_key">coordsFormat</string>
    <string name="settings_coordinates_format_title">Coordinates format</string>
    <string name="settings_coordinates_format_dd_label">Decimal degrees</string>
    <string name="settings_coordinates_format_dd_value">dd</string>
    <string name="settings_coordinates_format_ddm_label">Degrees, decimal minutes</string>
    <string name="settings_coordinates_format_ddm_value">ddm</string>
    <string name="settings_coordinates_format_dms_label">Degrees, minutes, seconds</string>
    <string name="settings_coordinates_format_dms_value">dms</string>
    <string name="settings_coordinates_format_mgrs_label">MGRS</string>
    <string name="settings_coordinates_format_mgrs_value">mgrs</string>
    <string name="settings_coordinates_format_utm_label">UTM</string>
    <string name="settings_coordinates_format_utm_value">utm</string>
    <string name="settings_privacy_policy_key">privacyPolicy</string>
    <string name="settings_privacy_policy_summary">Learn more about how Positional respects your privacy and uses your data</string>
    <string name="settings_privacy_policy_title" translatable="false">@string/common_privacy_policy</string>
    <string name="settings_root_title">Settings</string>
    <string name="settings_screen_lock_key">screenLock</string>
    <string name="settings_screen_lock_content_description">lock screen</string>
    <string name="settings_show_accuracies_key">showAccuracies</string>
    <string name="settings_show_accuracies_summary">Android 8 (Oreo) and above only</string>
    <string name="settings_show_accuracies_title">Show accuracies</string>
    <string name="settings_theme_system_label">System</string>
    <string name="settings_theme_system_value">system</string>
    <string name="settings_theme_light_label">Light</string>
    <string name="settings_theme_light_value">light</string>
    <string name="settings_units_dialog_title">Units of measurement</string>
    <string name="settings_units_key">useMetricUnits</string>
    <string name="settings_units_title">Units of measurement</string>
</resources>