<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:src="@drawable/dusk"
        app:layout_constraintBottom_toTopOf="@id/divider0"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:alpha="0.6"
        android:contentDescription="@null"
        android:src="@drawable/ic_dusk"
        android:tint="@color/colorOnBackground"
        app:layout_constraintBottom_toBottomOf="@id/duskTextView"
        app:layout_constraintEnd_toStartOf="@id/duskTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/duskTextView" />

    <TextView
        android:id="@+id/duskTextView"
        style="@style/TextAppearance.Positional.Headline4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/sun_dusk_label"
        app:layout_constraintBottom_toTopOf="@id/divider0"
        app:layout_constraintEnd_toStartOf="@id/dateTextView"
        app:layout_constraintStart_toEndOf="@id/iconImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.elyeproj.loaderviewlibrary.LoaderTextView
        android:id="@+id/dateTextView"
        style="@style/SunDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/duskTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/duskTextView"
        tools:text="Jan 31, 2020" />

    <include
        android:id="@+id/divider0"
        layout="@layout/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@id/sunsetLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/duskTextView" />

    <TextView
        android:id="@+id/sunsetLabelTextView"
        style="@style/SunStatLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/sun_sunset_label"
        android:tooltipText="@string/sun_sunset_tooltip"
        app:layout_constraintBottom_toTopOf="@id/divider1"
        app:layout_constraintEnd_toStartOf="@id/sunsetValueTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider0"
        tools:targetApi="o" />

    <com.elyeproj.loaderviewlibrary.LoaderTextView
        android:id="@+id/sunsetValueTextView"
        style="@style/SunStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@id/sunsetLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sunsetLabelTextView"
        app:layout_constraintTop_toTopOf="@id/sunsetLabelTextView"
        tools:text="12:00:00 AM" />

    <include
        android:id="@+id/divider1"
        layout="@layout/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@id/civilLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/sunsetLabelTextView" />

    <TextView
        android:id="@+id/civilLabelTextView"
        style="@style/SunStatLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:contentDescription="@string/sun_civil_content_description_dusk"
        android:text="@string/sun_civil_label"
        android:tooltipText="@string/sun_civil_tooltip_dusk"
        app:layout_constraintBottom_toTopOf="@id/divider2"
        app:layout_constraintEnd_toStartOf="@id/civilValueTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        tools:ignore="UnusedAttribute" />

    <com.elyeproj.loaderviewlibrary.LoaderTextView
        android:id="@+id/civilValueTextView"
        style="@style/SunStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@id/civilLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/civilLabelTextView"
        app:layout_constraintTop_toTopOf="@id/civilLabelTextView"
        tools:text="12:00:00 AM" />

    <include
        android:id="@+id/divider2"
        layout="@layout/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@id/nauticalLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/civilLabelTextView" />

    <TextView
        android:id="@+id/nauticalLabelTextView"
        style="@style/SunStatLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:contentDescription="@string/sun_nautical_content_description_dusk"
        android:text="@string/sun_nautical_label"
        android:tooltipText="@string/sun_nautical_tooltip_dusk"
        app:layout_constraintBottom_toTopOf="@id/divider3"
        app:layout_constraintEnd_toStartOf="@id/nauticalValueTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        tools:ignore="UnusedAttribute" />

    <com.elyeproj.loaderviewlibrary.LoaderTextView
        android:id="@+id/nauticalValueTextView"
        style="@style/SunStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@id/nauticalLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nauticalLabelTextView"
        app:layout_constraintTop_toTopOf="@id/nauticalLabelTextView"
        tools:text="12:00:00 AM" />

    <include
        android:id="@+id/divider3"
        layout="@layout/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@id/astronomicalLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/nauticalLabelTextView" />

    <TextView
        android:id="@+id/astronomicalLabelTextView"
        style="@style/SunStatLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/sun_astronomical_content_description_dusk"
        android:text="@string/sun_astronomical_label"
        android:tooltipText="@string/sun_astronomical_tooltip_dusk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/astronomicalValueTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3"
        tools:ignore="UnusedAttribute" />

    <com.elyeproj.loaderviewlibrary.LoaderTextView
        android:id="@+id/astronomicalValueTextView"
        style="@style/SunStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@id/astronomicalLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/astronomicalLabelTextView"
        app:layout_constraintTop_toTopOf="@id/astronomicalLabelTextView"
        tools:text="12:00:00 AM" />


</androidx.constraintlayout.widget.ConstraintLayout>
